# yet_another_vampire_survivor_clone

./: Cargo.toml
assets/: arcane-missile-explosion.aseprite  arcane-missile.aseprite  avatar.aseprite  background.aseprite  bouncing_ball.aseprite  claw.aseprite  design_ui.aseprite  enemies.aseprite  enemies.ron  enemies_all.aseprite  enemy_shadow.aseprite  enemy_shadow_center.aseprite  enemy_shadow_low.aseprite  fire-area.aseprite  gem.aseprite  gem_boss.aseprite  item_ui.aseprite  items.ron  map_1.ldtk  mini-shuriken.aseprite  player.aseprite  shuriken.aseprite  slow-dome.aseprite  sword-of-light.aseprite  sword.aseprite
src/: camera.rs  components.rs  constants.rs  enemies.rs  enemy.rs  fps.rs  gems.rs  lib.rs  main.rs  math_utils.rs  player.rs  stepping.rs  ui.rs  waves.rs  weapons.rs
src/animations/: animation.rs
src/cameras/: camera.rs
src/enemies/: bats.rs  bee.rs  boss_wolf.rs  enemies_bundle.rs  enemy.rs  golem.rs  rabbit.rs  skull.rs
src/gems/: boss_gem.rs  gem.rs
src/items/: item.rs
src/players/: player.rs
src/ui/: ui_choose_weapon.rs  ui_enemy.rs  ui_fps.rs  ui_global_timer.rs  ui_level_up.rs  ui_main_menu.rs  ui_player.rs  ui_update_weapon_up.rs
src/waves/: waves.rs  waves_map_1.rs
src/weapons/: arcane_missile.rs  bouncing_ball.rs  chain_lightning.rs  claw.rs  claw_upgrade_1.rs  fire_area.rs  fire_boots.rs  generic_systems.rs  light_sword.rs  projectiles.rs  shuriken.rs  slow_dome.rs  weapons.rs
