[package]
name = "yet_another_vampire_survivor_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
rand = "0.8.5"
bevy = { version = "0.13.0", features = [ "dynamic_linking" ] }
bevy_pixel_camera="0.13.0"
bevy-inspector-egui="0.23.3"
bevy_rapier2d = { version = "0.25.0", features = [ "simd-stable" ] }


[profile.dev.package."*"]
opt-level = 3
debug = false
codegen-units = 16

[profile.dev]
opt-level = 0
incremental = true
